...
                            textColor="#ffffff"
                            style={styles.understand}
                            contentStyle={styles.understandContent}
                            labelStyle={styles.understandLabel}
                            onPress={onClose}
                        >
                            I Understand
                        </Button>
                    </>
                )}
            </Modal>
        </Portal>
    );
...
